--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     .slither{
       text-align:center;
       text-decoration:underline;
+      padding:100px;
     }
   </style>
   </head>
@@ -15,6 +16,7 @@
     spawn on the map in the game, to grow in size. The objective of the game is to grow the longest worm in the server. 
     Slither.io is similar in concept to the popular 2015 web game Agar.io and is reminiscent of the classic arcade game Snake. 
     The game grew in popularity following its promotion among several prominent YouTube users such as PewDiePie. 
-    Once Slither.io 2.0 is released then it will grow in popularity much faster than the original ever did.</p>
+    Once Slither.io 2.0 is released then it will grow in popularity much faster than the original ever did.
+    Slither.io 2.0 is a superior game to any game on the market</p>
   </body>
   </html>
