--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     The game grew in popularity following its promotion among several prominent YouTube users such as PewDiePie. 
     Once Slither.io 2.0 is released then it will grow in popularity much faster than the original ever did.
     Slither.io 2.0 is a superior game to any game on the market</p> <br> <br>
-    <img class=Pictures src="https://i.ytimg.com/vi/lJSYdnUP85Q/maxresdefault.jpg"  height="45 px" width="85px"> 
+    <img class=Pictures src="https://i.ytimg.com/vi/lJSYdnUP85Q/maxresdefault.jpg"  height="auto" width="auto"> 
     
     
   </body>
