--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <h1>Slither.io 2.0</h1>
-  <p href="WebpageAssignment/Snakes-for-Sale">Slither.io 2.0 provides a premium experiance of Slither.io. Slither.io 2.0 gives many features that Slither.io doesn't. 
+  <p href="WebpageAssignment/Snakes-for-Sale">Slither.io 2.0 provides a premium experiance of Slither.io. Slither.io 2.0 gives many 
+    features that Slither.io doesn't. 
     Players control an avatar resembling a worm, which consumes multicolored pellets, both from other players and ones that naturally 
     spawn on the map in the game, to grow in size. The objective of the game is to grow the longest worm in the server. 
     Slither.io is similar in concept to the popular 2015 web game Agar.io and is reminiscent of the classic arcade game Snake. 
